<resources>
    <string name="app_name">DoubanMovie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="collect_count_desc">%d人已看</string>
    <string name="action_settings">设置</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="more">更多</string>
    <string name="favorites">我的收藏</string>
    <string name="search">搜索</string>
    <string name="all">全部</string>
    <string name="now">正在热映</string>
    <string name="action_search">搜索</string>
    <string name="title_search">搜索</string>
    <string name="title_favorite">我的收藏</string>
    <string name="title_movielist">全部</string>
    <string name="title_now">正在热映</string>
    <string name="action_refresh">刷新</string>
    <string name="movie_summary_desc">剧情简介</string>
    <string name="movie_description">城市在恢复平静后，大反派重新召集旧部卷土重来，并勾结外星恶势力朗格试图称霸地球，忍者神龟莱昂纳多（皮特·普劳泽克 Pete Ploszek 饰）、拉斐尔（阿兰·里奇森 Alan Ritchson 饰）、多纳泰罗（杰瑞米·霍华德 Jeremy Howard 饰）和米开朗基罗（诺尔·费舍 Noel Fisher 饰）与女记者艾蓓丽尔·奥尼尔（梅根·福克斯 Megan Fox 饰）、韦恩·芬威克（威尔·阿奈特 Will Arnett 饰），及面具义警凯西·琼斯（斯蒂芬·阿梅尔 Stephen Amell 饰）并肩作战打击恶徒。在史莱德（布莱恩·泰 Brian Tee 饰）逃脱拘留后，他与疯狂的科学家巴克斯特斯·托克曼（泰勒·派瑞 Tyler Perry 饰）及其两个笨拙的左膀右臂猪面和牛头联合，发布了一个控制世界的恶魔计划。在神龟们与史莱德及其同伙对抗的同时，他们发现自己正面临着一个更邪恶的力量大反派格朗，神龟们面对的将是宇宙级的强大对手。</string>
    <string name="movie_info_desc">影片信息</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue     cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian     bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber     cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese     the big cheese.</string>
</resources>
