<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now"
            android:checked="true"
            android:icon="@drawable/icon_menu_now"
            android:title="@string/now"/>
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/icon_menu_all"
            android:title="@string/all"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/icon_menu_search"
            android:title="@string/search"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/icon_menu_favorite"
            android:title="@string/favorites"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_menu_settings"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
